initial upgrade to jdk21