@@ -3,9 +3,11 @@ package org.neo.servaframe;
 import java.util.*;
 import java.sql.SQLException;
 
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 import org.neo.servaframe.interfaces.*;
 import org.neo.servaframe.model.*;
@@ -13,35 +15,16 @@ import org.neo.servaframe.model.*;
 /**
  * Unit test for DBService
  */
-public class DBServiceTest 
-    extends TestCase {
-    /**
-     * Create the test case
-     *
-     * @param testName name of the test case
-     */
-    public DBServiceTest( String testName ) {
-        super( testName );
-    }
+class DBServiceTest {
 
-    @Override
-    protected void setUp() throws Exception {
-        super.setUp();
-        // Code to set up resources or initialize variables before each test method
+    @BeforeEach
+    void setUp() throws Exception {
         cleanDatabase();
     }
 
-    @Override
-    protected void tearDown() throws Exception {
-        // Code to clean up resources after each test method
-        super.tearDown();
-    }
-
-    /**
-     * @return the suite of tests being tested
-     */
-    public static Test suite() {
-        return new TestSuite( DBServiceTest.class );
+    @AfterEach
+    void tearDown() throws Exception {
+        // no-op (kept to mirror original structure)
     }
 
     private void cleanDatabase() {
@@ -51,94 +34,83 @@ public class DBServiceTest
     }
 
     private VersionEntity generateEmployee() {
-        // create java entity of employee
-        // set all necessary attribute
         VersionEntity employee = new VersionEntity("employee");
         employee.setAttribute("no", "1");
         employee.setAttribute("name", "Tom");
         employee.setAttribute("age", 23);
         employee.setAttribute("address", "auckland at 📝 ");
         employee.setAttribute("createDate", new Date());
-
         return employee;
     }
 
-    public void testInsert() {
+    @Test
+    void testInsert() {
         VersionEntity employee = generateEmployee();
         int numberBefore = getNumberOfEmployee();
         insertEmployee(employee);
         int numberAfter = getNumberOfEmployee();
-        assertEquals(numberBefore, 0);
-        assertEquals(numberAfter, 1);
+        assertEquals(0, numberBefore);
+        assertEquals(1, numberAfter);
         System.out.println("testInsert passed");
     }
 
     private void insertEmployee(VersionEntity employee) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
         dbService.executeSaveTask(new DBSaveTaskIFC() {
             @Override
             public Object save(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     dbConnection.insert(employee);
                     return null;
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
         });
-    } 
+    }
 
-    public void testTransaction() {
+    @Test
+    void testTransaction() {
         VersionEntity employee = generateEmployee();
         int numberBefore = getNumberOfEmployee();
         try {
             insertEmployeeWithExceptionInTransaction(employee);
+        } catch (Exception ex) {
+            // swallow like original
         }
-        catch(Exception ex) {
-        } 
         int numberAfter = getNumberOfEmployee();
-        assertEquals(numberBefore, 0);
-        assertEquals(numberAfter, 0);
+        assertEquals(0, numberBefore);
+        assertEquals(0, numberAfter);
         System.out.println("testTransaction passed");
     }
 
-    public void testAutoCommit() {
+    @Test
+    void testAutoCommit() {
         VersionEntity employee = generateEmployee();
         int numberBefore = getNumberOfEmployee();
         try {
             insertEmployeeWithExceptionInAutoCommit(employee);
+        } catch (Exception ex) {
+            // swallow like original
         }
-        catch(Exception ex) {
-        } 
         int numberAfter = getNumberOfEmployee();
-        assertEquals(numberBefore, 0);
-        assertEquals(numberAfter, 1);
+        assertEquals(0, numberBefore);
+        assertEquals(1, numberAfter);
         System.out.println("testAutoCommit passed");
     }
 
     private void insertEmployeeWithExceptionInTransaction(VersionEntity employee) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
         dbService.executeSaveTask(new DBSaveTaskIFC() {
             @Override
             public Object save(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     dbConnection.insert(employee);
-                    if(true) {
-                        // meet exception
+                    if (true) {
                         throw new RuntimeException("test roll back");
                     }
                     return null;
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
@@ -146,30 +118,25 @@ public class DBServiceTest
     }
 
     private void insertEmployeeWithExceptionInAutoCommit(VersionEntity employee) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
         dbService.executeAutoCommitSaveTask(new DBAutoCommitSaveTaskIFC() {
             @Override
             public Object autoCommitSave(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     dbConnection.insert(employee);
-                    if(true) {
-                        // meet exception
+                    if (true) {
                         throw new RuntimeException("test roll back");
                     }
                     return null;
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
         });
     }
- 
-    public void testUpdate() {
+
+    @Test
+    void testUpdate() {
         VersionEntity employee = generateEmployee();
         insertEmployee(employee);
         employee.setAttribute("name", null);
@@ -180,50 +147,41 @@ public class DBServiceTest
     }
 
     private void updateEmployee(VersionEntity employee) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
         dbService.executeSaveTask(new DBSaveTaskIFC() {
             @Override
             public Object save(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     dbConnection.update(employee);
                     return null;
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
         });
     }
- 
-    public void testDelete() {
+
+    @Test
+    void testDelete() {
         VersionEntity employee = generateEmployee();
         insertEmployee(employee);
         int numberBefore = getNumberOfEmployee();
         deleteEmployee(employee);
         int numberAfter = getNumberOfEmployee();
-        assertEquals(numberBefore, 1);
-        assertEquals(numberAfter, 0);
+        assertEquals(1, numberBefore);
+        assertEquals(0, numberAfter);
         System.out.println("testDelete passed");
     }
 
     private void deleteEmployee(VersionEntity employee) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
         dbService.executeSaveTask(new DBSaveTaskIFC() {
             @Override
             public Object save(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     dbConnection.delete(employee);
                     return null;
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
@@ -231,58 +189,50 @@ public class DBServiceTest
     }
 
     private int getNumberOfEmployee() {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
         Object result = dbService.executeQueryTask(new DBQueryTaskIFC() {
             @Override
             public Object query(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     String sql = "select count(*) as number from employee";
                     return dbConnection.queryScalar(sql);
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
         });
-        return new Integer(result.toString()).intValue();
+        return Integer.valueOf(result.toString());
     }
 
-    public void testQueryScalar() {
+    @Test
+    void testQueryScalar() {
         VersionEntity employee = generateEmployee();
         insertEmployee(employee);
         String name = getEmployeeName(employee.getId());
-        assertEquals(name, "Tom");
+        assertEquals("Tom", name);
         System.out.println("testQueryScalar passed");
     }
 
     private String getEmployeeName(String employeeId) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
-        return (String)dbService.executeQueryTask(new DBQueryTaskIFC() {
+        return (String) dbService.executeQueryTask(new DBQueryTaskIFC() {
             @Override
             public Object query(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     String sql = "select name from employee where id = ?";
                     List<Object> params = new ArrayList<Object>();
                     params.add(employeeId);
                     SQLStruct sqlStruct = new SQLStruct(sql, params);
                     return dbConnection.queryScalar(sqlStruct);
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
         });
     }
 
-    public void testQuery() {
+    @Test
+    void testQuery() {
         VersionEntity employee = generateEmployee();
         insertEmployee(employee);
         List<Map<String, Object>> result = queryBySQL();
@@ -291,47 +241,41 @@ public class DBServiceTest
     }
 
     private List<Map<String, Object>> queryBySQL() {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
-        return (List<Map<String, Object>>)dbService.executeQueryTask(new DBQueryTaskIFC() {
-            @Override
-            public Object query(DBConnectionIFC dbConnection) {
-                try {
-                    // do business logic
-                    String sql = "select * from employee";
-                    return dbConnection.query(sql);
+        @SuppressWarnings("unchecked")
+        List<Map<String, Object>> rows =
+            (List<Map<String, Object>>) dbService.executeQueryTask(new DBQueryTaskIFC() {
+                @Override
+                public Object query(DBConnectionIFC dbConnection) {
+                    try {
+                        String sql = "select * from employee";
+                        return dbConnection.query(sql);
+                    } catch (SQLException ex) {
+                        throw new RuntimeException(ex);
+                    }
                 }
-                catch(SQLException ex) {
-                    throw new RuntimeException(ex);
-                }
-            }
-        });
+            });
+        return rows;
     }
 
-    public void testLoadById() {
+    @Test
+    void testLoadById() {
         VersionEntity employee = generateEmployee();
         insertEmployee(employee);
         VersionEntity versionEntity = loadById(employee.getId());
         System.out.println("address = " + versionEntity.getAttribute("address"));
-        assertEquals(versionEntity.getAttribute("name"), "Tom");
+        assertEquals("Tom", versionEntity.getAttribute("name"));
         System.out.println("testLoadById passed");
     }
 
     private VersionEntity loadById(String employeeId) {
-        // instantiate DBService
         DBServiceIFC dbService = ServiceFactory.getDBService();
-
-        // start to execute Task
-        return (VersionEntity)dbService.executeQueryTask(new DBQueryTaskIFC() {
+        return (VersionEntity) dbService.executeQueryTask(new DBQueryTaskIFC() {
             @Override
             public Object query(DBConnectionIFC dbConnection) {
                 try {
-                    // do business logic
                     return dbConnection.loadVersionEntityById("employee", employeeId);
-                }
-                catch(SQLException ex) {
+                } catch (SQLException ex) {
                     throw new RuntimeException(ex);
                 }
             }
@@ -346,9 +290,9 @@ class CleanDatabaseTask implements DBSaveTaskIFC {
             String sql = "delete from employee";
             dbConnection.execute(sql);
             return null;
-        }
-        catch(SQLException ex) {
+        } catch (SQLException ex) {
             throw new RuntimeException(ex);
         }
     }
 }
+
